--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "start": "vite --host 0.0.0.0",
     "build": "vite build",
-    "serve": "vite preview",
+    "serve": "vite preview --port 8080",
     "lint:style": "stylelint src/**/*.{css,scss,sass,less}",
     "lint:fix": "stylelint --fix src/**/*.{css,scss,sass,less}"
   },
